refactor: cicd.yml

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,10 +10,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  run-tests:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [20.x]
